# ASR_jetson

./: .dockerignore  .gitignore  DEPLOY_TRT_LLM.md  README.md  pyproject.toml  pytest.ini
.github/: CODEOWNERS
.github/workflows/: docker-build-jetson.yml  docker-build-push.yml  docker-build-push.yml.disabled  tests.yml
configs/: catalog.json  dev.yaml
docker/: Dockerfile  Dockerfile.jetson  Dockerfile.tensorrt-llm  build_linux.sh  build_windows.ps1  requirements.txt  run_linux.sh  run_windows.ps1
scripts/: build_qwen_trt_engine.sh  run_asr_pipeline.py  run_docker.ps1  trtllm_server.py
src/: __init__.py  pipeline.py
src/asr/: __init__.py  fastconformer.py  transcribe.py  whisper_engine.py
src/asr_jetson/: __main__.py
src/asr_jetson/asr/: __init__.py  transcribe.py  whisper_engine.py
src/asr_jetson/config/: config.py  meeting.html  mistral_prompts.json  report.css
src/asr_jetson/diarization/: __init__.py  clustering.py  pipeline_diarization.py  titanet.py
src/asr_jetson/pipeline/: __init__.py  cli.py  full_pipeline.py
src/asr_jetson/postprocessing/: anonymizer.py  anonymizer_OLD.py  docx_export.py  generate_report.py  llm_clean.py  meeting_report.py  mistral_client.py  text_export.py  transformer_anonymizer.py
src/asr_jetson/preprocessing/: __init__.py  convert_to_wav.py  rnnoise.py
src/asr_jetson/utils/: config.py  logging_setup.py
src/asr_jetson/vad/: marblenet.py  silero.py
src/config/: config.py
src/diarization/: clustering.py  pipeline.py  pipeline_diarization.py  titanet.py
src/pipeline/: __init__.py  full_pipeline.py
src/postprocessing/: __init__.py  text_export.py
src/preprocessing/: rnnoise.py  vad.py
src/utils/: __init__.py  logging_setup.py
src/vad/: __init__.py
tests/: conftest.py  test_anonymization.py  test_asr_whisper.py  test_clustering.py  test_diarization.py  test_full_pipeline.py  test_meeting_report.py  test_performance_anonymization.py  test_pipeline.py  test_postprocessing.py  test_rnnoise.py  test_text_cleaning.py  test_transcription_meeting_report.py  test_transformer_anonymizer.py  test_txt_file_format.py  test_vad.py  utils.py
