[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asr-jetson"
version = "0.1.0"
description = "Lightweight ASR Pipeline with Diarization for Jetson Orin Nano"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = {text = "MIT"}
authors = [{ name = "Xavier Bertrand", email = "xavier.bertrand@example.com" }]
keywords = ["asr", "speech-recognition", "diarization", "jetson", "whisper", "nemo"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
  "numpy",
  "scikit-learn",
  "tqdm",
  "pydub",
  "soundfile",
  "librosa==0.10.2.post1",
  "ffmpeg-python",
  "faster-whisper",
  "huggingface_hub",
  "onnx>=1.14",
  "jiwer<4",
  "marshmallow",
  "pyloudnorm",
  "resampy",
  "wrapt",
  "braceexpand",
  "editdistance",
  "wget",
  "tensorboard",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "pyyaml",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "pytest-xdist>=3.3.0",
  "pytest-asyncio>=0.21.0",
  "black>=23.0.0",
  "ruff>=0.1.0",
  "mypy>=1.5.0",
  "pre-commit>=3.4.0",
]
api = [
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "python-multipart>=0.0.6",
]
# Installe Nemo uniquement sur Linux (Jetson compris)
nemo = [
  "nemo_toolkit[asr]; platform_system == 'Linux'",
]
# Installe TensorRT/PyCUDA seulement sur Jetson (Linux aarch64)
tensorrt = [
  "tensorrt; platform_system == 'Linux' and platform_machine == 'aarch64'",
  "pycuda; platform_system == 'Linux' and platform_machine == 'aarch64'",
]
# PyAV : wheels Win vs Linux/mac
media = [
  "av<15; platform_system == 'Windows'",
  "av>=15; platform_system != 'Windows'",
]
# pytorch on windows, not needed on jetson
gpu-win = [
  "torch==2.4.0+cu124; platform_system == 'Windows'",
]

[project.urls]
Homepage = "https://github.com/XavBertrand/ASR_jetson"
Repository = "https://github.com/XavBertrand/ASR_jetson"
Issues = "https://github.com/XavBertrand/ASR_jetson/issues"

[project.scripts]
# CLI unique du pipeline (pas d’API pour l’instant)
asr-pipeline = "asr_jetson.pipeline.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["asr_jetson*"]
exclude = ["tests*", "docs*", "scripts*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "-v",
  "--strict-markers",
  "--tb=short",
  "--cov=src/asr_jetson",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-report=xml",
]
markers = [
  "integration: integration tests (slow, may require models)",
  "unit: fast unit tests",
  "gpu: tests requiring GPU",
  "slow: slow tests (> 5 seconds)",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
]

#[tool.uv]
## aide la résolution multi-plateformes
#required-environments = ["win_amd64", "manylinux_2_28_aarch64", "macosx_11_0_x86_64", "macosx_14_0_arm64"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "C901"]
exclude = [".git", "__pycache__", ".venv", "venv", "build", "dist"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["tests/", "build/"]

[tool.coverage.run]
source = ["src/asr_jetson"]
omit = [
  "*/tests/*",
  "*/test_*.py",
  "*/__pycache__/*",
  "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu124"]