[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asr-jetson"
version = "0.1.0"
description = "Lightweight ASR Pipeline with Diarization for Jetson Orin Nano"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = {text = "MIT"}
authors = [{ name = "Xavier Bertrand", email = "xavier.bertrand@example.com" }]
keywords = ["asr", "speech-recognition", "diarization", "jetson", "whisper"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
  # >>> NumPy redevient 2.x pour pyannote et Torch
  "numpy>=2.3.3,<3.0",
  "pydub",
  "soundfile",
  "faster-whisper",
  "pydantic>=2.0.0",
  "pyyaml",
  "huggingface_hub>=0.25,<1.0",
  "transformers>=4.44,<5",
  "ctranslate2>=4.4.0",
  # --- PyTorch multi-arch / CUDA 12.6 etc. ---
  # Windows x86_64 CUDA 12.6
  "torch==2.8.0+cu126; platform_system == 'Windows' and platform_machine == 'AMD64'",
  "torchaudio==2.8.0+cu126; platform_system == 'Windows' and platform_machine == 'AMD64'",
  # Linux x86_64 CUDA 12.6
  "torch==2.8.0+cu126; platform_system == 'Linux' and platform_machine == 'x86_64'",
  "torchaudio==2.8.0+cu126; platform_system == 'Linux' and platform_machine == 'x86_64'",
  # Jetson Linux aarch64
  "torch>=2.0.0; platform_system == 'Linux' and platform_machine == 'aarch64'",
  "torchaudio>=2.0.0; platform_system == 'Linux' and platform_machine == 'aarch64'",
  "language-tool-python>=2.9.4",
  "python-docx>=1.2.0",
  "pytest>=8.4.2",
  "flashtext>=2.7",
  "rapidfuzz>=3.14.1",
  "unidecode>=1.4.0",
  "gliner>=0.2.7",
  # diarisation / VAD / embeddings (pyannote)
  "pyannote-audio>=4.0.1; platform_machine != 'aarch64'",
  "pyannote-audio>=3.1.1,<4.0; platform_machine == 'aarch64'",
  "librosa==0.10.2.post1",
  "audioread>=3.0.1",
  "scipy>=1.16.2",
  "scikit-learn>=1.7.2",
  "numba>=0.62.1",
  "torchcodec==0.6.0; platform_system == 'Linux' and platform_machine == 'x86_64'",
  "tiktoken>=0.12.0",
  "sentencepiece>=0.2.1",
  "tokenizers>=0.20,<0.21",
  "mistralai>=1.9.11",
  "docx-python>=0.1.0",
  "pypandoc-binary>=1.15",
  "sacremoses>=0.1.1",
  "pypandoc>=1.15",
  "gliner>=0.2.22",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "pytest-xdist>=3.3.0",
  "pytest-asyncio>=0.21.0",
  "black>=23.0.0",
  "ruff>=0.1.0",
  "mypy>=1.5.0",
  "pre-commit>=3.4.0",
]
api = [
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "python-multipart>=0.0.6",
]
tensorrt = [
  "tensorrt; platform_system == 'Linux' and platform_machine == 'aarch64'",
  "pycuda; platform_system == 'Linux' and platform_machine == 'aarch64'",
]
media = [
  "av>=13,<15",
]
gpu-win = [
  "torch==2.8.0+cu126; platform_system == 'Windows'",
  "torchaudio==2.8.0+cu126; platform_system == 'Windows'",
]
gpu-linux = [
  "torch==2.8.0+cu126; platform_system == 'Linux' and platform_machine == 'x86_64'",
  "torchaudio==2.8.0+cu126; platform_system == 'Linux' and platform_machine == 'x86_64'",
]
gpu-jetson = [
  "torch>=2.0.0; platform_system == 'Linux' and platform_machine == 'aarch64'",
  "torchaudio>=2.0.0; platform_system == 'Linux' and platform_machine == 'aarch64'",
]

[project.urls]
Homepage = "https://github.com/XavBertrand/ASR_jetson"
Repository = "https://github.com/XavBertrand/ASR_jetson"
Issues = "https://github.com/XavBertrand/ASR_jetson/issues"

[project.scripts]
asr-pipeline = "asr_jetson.pipeline.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["asr_jetson*"]
exclude = ["tests*", "docs*", "scripts*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "-v",
  "--strict-markers",
  "--tb=short",
  "--cov=src/asr_jetson",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-report=xml",
]
markers = [
  "integration: integration tests (slow, may require models)",
  "unit: fast unit tests",
  "gpu: tests requiring GPU",
  "slow: slow tests (> 5 seconds)",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "C901"]
exclude = [".git", "__pycache__", ".venv", "venv", "build", "dist"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["tests/", "build/"]

[tool.coverage.run]
source = ["src/asr_jetson"]
omit = [
  "*/tests/*",
  "*/test_*.py",
  "*/__pycache__/*",
  "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.uv]
index-strategy = "unsafe-best-match"
environments = [
  "python_version >= '3.11' and platform_system == 'Linux' and platform_machine == 'x86_64'",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchaudio = { index = "pytorch-cu126" }

[tool.uv.extra-build-dependencies]
youtokentome = ["Cython"]
